[package]
name = "iroh_gossip"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
iroh = "0.93.2"
iroh-gossip = "0.93.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
data-encoding = "2"
rand = "0.9.2"
futures-lite = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
