[package]
name = "iroh_gossip_node"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
iroh = "0.93.2"
iroh-gossip = { version = "0.93.1", features = ["net"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
data-encoding = "2"
rand = "0.9.2"  
futures-lite = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
snafu = { version = "0.8.5" }
blake3 = "1.8.2"
async-broadcast = "0.7.2"

[[bin]]
name = "gossip_node"
path = "src/gossip_node.rs"

